--- a/src/main/resources/templates/createCompany.html
+++ b/src/main/resources/templates/createCompany.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="includes :: indexHead"></head>
 <body>
 <div th:include="navbar :: navHome"></div>
 
 <main>
-    <form th:action="@{/signup/company/}" method="post" >
+    <form th:action="@{/signup/company/}" method="post" enctype="multipart/form-data">
         <div th:object="${user}">
             <div class="row">
                 <div class="input-field col s12">
@@ -50,10 +51,20 @@
                     <input id="email" type="email" th:field="*{email}"/>
                 </div>
             </div>
-
+            <!--<div class="row">-->
+                <!--<div class="file-field input-field">-->
+                    <!--<div class="btn">-->
+                        <!--<span>File</span>-->
+                        <!--<input type="file">-->
+                    <!--</div>-->
+                    <!--<div class="file-path-wrapper">-->
+                        <!--<input class="file-path validate" type="text" th:field="*{companyPic}" placeholder="Choose Profile Image">-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
 
-        <button class="waves-effect waves-light btn" type="submit" >Save</button>
+        <button class="waves-effect waves-light btn" type="submit" >Create Profile</button>
 
     </form>
 </main>
