--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="includes :: indexHead"></head>
 <body class="login">
 <div class="container">
     <div class="row">
         <div class="col s8">
-            <h1 class="brand-logo white-text" id="logo">gigFinder</h1>
+            <div class="card-panel">
+                <h1 class="brand-logo" id="logo">gigFinder</h1>
+                <div class="card medium">
+                    <div class="card-content">
+                        <h1>LOGIN</h1>
+                        <div style="color: red;" th:text="${error}"></div>
+
+                        <form th:action="@{/login}" th:object="${user}" method="post">
+                            <input type="text" th:field="*{username}" placeholder="Username"/>
+                            <input type="password" th:field="*{password}" placeholder="Password"/>
+                            <button class="waves-effect waves-light btn" type="submit" >Login</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
         </div>
-        <div class="loginForm col s4">
-            <h1>LOGIN</h1>
-            <div style="color: red;" th:text="${error}"></div>
 
-            <form th:action="@{/login}" th:object="${user}" method="post">
-                <input type="text" th:field="*{username}" placeholder="Username"/>
-                <input type="password" th:field="*{password}" placeholder="Password"/>
-                <button class="waves-effect waves-light btn" type="submit" >Login</button>
-            </form>
-        </div>
-    </div>
-
+</div>
 
 </div>
 <div th:include="modals :: signupModal"></div>
